manifests/rustdesk/08-webclient-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rustdesk-webclient
  namespace: rustdesk
  labels:
    app: rustdesk-webclient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rustdesk-webclient
  template:
    metadata:
      labels:
        app: rustdesk-webclient
    spec:
      containers:
        - name: webclient
          image: keyurbhole/flutter_web_desk:latest
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
