manifests/rustdesk/09-webclient-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustdesk-webclient
  namespace: rustdesk
  labels:
    app: rustdesk-webclient
spec:
  type: ClusterIP
  selector:
    app: rustdesk-webclient
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
